# interactive-render-workflow

./: .gitignore  README.md  pyproject.toml
irwapi/: plotting.py  stuff.py
notebooks/: align.ipynb  align_render-client.ipynb  export.ipynb  fine_align_render-client.ipynb  import.ipynb  post-correct.ipynb  rough_align_render-client.ipynb  stitch.ipynb  stitch_render-client.ipynb
src/: features.py  prematching.py  utils.py
src/interactive_render/: features.py  plotting.py  prematching.py  trakem2.py  utils.py
templates/: align.json
