[project]
name = "interactive-render-workflow"
version = "0.0.1"
authors = [
  { name="Ryan Lane", email="r.i.lane@tudelft.nl" },
  { name="Arent Kievits", email="a.j.kievits@tudelft.nl" },
  { name="thopp-tudelft", email="t.r.hoppener@tudelft.nl" },
]
keywords = [
  "image processing",
  "volume reconstruction",
  "image stitching",
  "electron microscopy",
  "microscopy",
  "render-python",
  "requests",
]
description = "Interactive workflow for aligning volume electron microscopy datasets."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "imagecodecs",
  "numpy",
  "pyyaml",
  "render-python",
  "requests",
  "scikit-image",
  "tifffile",
  "tqdm",
  "bigfeta",
  "jupyter",
  "ipywidgets",
  "scipy",
  "natsort",
]

[project.optional-dependencies]
format = [
  "black",
  "isort",
  "flake8",
]

[project.urls]
"Homepage" = "https://github.com/hoogenboom-group/interactive-render-workflow"
"Bug Tracker" = "https://github.com/hoogenboom-group/interactive-render-workflow/issues"
